# smartmonitor_hid_lib

./: .gitignore  CHANGELOG.md  LICENSE  MANUAL.md  MANUAL_RU.md  README.md  README_RU.md  SECURITY.md  pyproject.toml
examples/: basic_runtime_demo.py
src/smartmonitor_hid/: __init__.py  _bridge.py  cli.py  client.py  compiler.py  edit.py  errors.py  imgdat.py  protocol.py  render.py  report.py  runtime.py  service.py  theme.py  transport.py  ui.py
tests/: test_cli_and_bridge.py  test_client.py  test_compiler_standalone.py  test_edit.py  test_report.py  test_runtime.py  test_service.py  test_ui_and_imgdat.py
