[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smartmonitor-hid"
version = "0.1.0"
description = "Experimental standalone HID SmartMonitor transport/runtime library"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [
  {name = "Agentry433"},
]
dependencies = ["Pillow>=10.0"]

[project.scripts]
smartmonitor-hid = "smartmonitor_hid.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
